@@ -1,3 +1,8 @@
+2006-12-13  Sébastien Sablé  <sable.sungard@gmail.com>
+
+	* databuf.c, datafmt.c: Patch to handle CS_LONG type based on
+	patch by Paul Rensing
+
 2006-12-08  Sébastien Sablé  <sable.sungard@gmail.com>
 
 	* setup.py, Sybase.py: Changing to release 0.38pre1
